# devkit_forense

./: .gitignore  README.md  commands.txt  devkit.db  generate_changelog.py  index.html  main.py  network_map_20250822_103038.json  network_map_20250822_103038_advanced.csv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
amostras_forenses/: planilha.xls.scr  relatorio_copia.docx
api/: main.py
api/routers/: executions.py  functionalities.py  reports.py
changelog/: v0.0.1.md  v0.0.2.md  v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.2.1.md  v1.2.10.md  v1.2.11.md  v1.2.12.md  v1.2.13.md  v1.2.2.md  v1.2.3.md  v1.2.4.md  v1.2.5.md  v1.2.6.md  v1.2.7.md  v1.2.8.md  v1.2.9.md  v1.3.0.md  v1.4.0.md  v1.4.1.md  v1.4.2.md
cli/: cli.py  gerar_amostras.py
core/browser/: browser_history.py  common_words.py  fav_screen.py  full_browser_history.py  logins_chrome.py  unusual_patterns.py
core/models/: orm.py  schemas.py
core/network/: network_map.py  port_scanner.py
docs/: generate_index.py
modules/: browser_history.py  downloads_history.py  file_inspector.py  unusual_patterns.py
modules/browsers/: common_words.py  fav_screen.py  logins_edge.py
modules/email/: email_parser.py  header_analysis.py
modules/network/: fingerprinting.py  network_map.py  network_report.py  ping_sweep.py  port_scanner.py  utils.py
src/api/routers/: modules.py  results.py
src/api/utils/: db.py
src/app/: main.py
src/app/static/css/: style.css
src/app/static/js/: network.js
src/app/templates/: index.html
src/app/utils/: converter.py
src/cli/: cli.py  main.py
src/cli/commands/: browser.py  describe.py  network.py
src/cli/output/: network_map_20250829_110117.csv
src/core/browser/: browser_history.py  downloads_history.py  logins_edge.py  unusual_patterns.py
src/core/network/: dns_recon.py  network_map.py  ping_sweep.py  port_scanner.py
tests/: test_file_inspector.py
