[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-cli"
version = "1.0.0"
description = "DevKit Forense - CLI para análise de navegadores e rede"
readme = "README.md"
license = "MIT"  # Apenas a expressão de licença, sem classifier
authors = [
    {name = "Erick Gabriel dos Santos Alves", email = "erickgabrielalves0@gmail.com"}
]
requires-python = ">=3.8"
keywords = ["forensics", "cli", "network", "browser"]

dependencies = [
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cryptography==45.0.6",
    "cycler==0.12.1",
    "fonttools==4.59.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.10",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.5",
    "numpy==2.3.2",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.3.2",
    "pefile==2023.2.7",
    "pillow==11.3.0",
    "pycparser==2.22",
    "pycryptodome==3.23.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pyparsing==3.2.3",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==311",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.5",
    "scapy==2.6.1",
    "selenium==4.35.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "SQLAlchemy==2.0.43",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "typer",
    "scapy",
    "rich",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cli*", "core*"]

[project.scripts]
forensic-cli = "cli.main:app"
